Fixed icon alignment

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ user-select: none;
 #icon
 {
   width: 100px;
+  display: block;
   margin-top: 10px ;
   transition: 0.25s ease;
 }
@@ -52,15 +53,16 @@ user-select: none;
 #icon i
 {
   font-size: 50px;
-  margin-right: 25px;
-  margin-left: 25px;
+  padding-top: 10px;
+  display: block;
   margin-top: 5px;
 }
 
 #icon span
 {
   font-size: 15px;
-  margin-top: 50px;
+  display: block;
+  padding-bottom: 10px;
   color: #fff;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
@@ -122,6 +124,7 @@ user-select: none;
 #button_right
 {
   float: right;
+  border-left: 1px solid #333;
   width: 48.5px;
   height: 100%;
   float: right;
@@ -146,6 +149,12 @@ user-select: none;
  color: #e34f26;
 }
 
+
+#button_right .fa-font-awesome:hover
+{
+ color: #1fa67a;
+}
+
 #button_right_credit
 {
   float: right;
@@ -157,4 +166,12 @@ user-select: none;
   font-size: 15px;
   padding: 10px;
   border-left: 1px solid #333;
+}
+
+.recycle_bin
+{
+  position:fixed;
+  right:0px;
+  bottom:45px;
+  margin: 10px;
 }
